docs: add Russian language support in references section
- Add Russian section for the references, including a title and structure for language-specific visibility.
- Ensure language-specific sections in the document for Russian and English references.

Signed-off-by: Eugene Letenkov <eugene@letenkov.ru>

--- a/references.qmd
+++ b/references.qmd
@@ -17,9 +17,23 @@ knitr::opts_chunk$set(
 
 ::::: {.content-visible when-format="html"}
 
+
+:::: {.content-visible when-profile=“ru”}
+
+# Список литературы {.unnumbered}
+
+::: {#refs}
+:::
+
+::::
+
+:::: {.content-visible when-profile=“en”}
+
 # References {.unnumbered}
 
 ::: {#refs}
 :::
+
+::::
 
 :::::
